@@ -8,6 +8,7 @@
 [1, 1, 1, 1, 1]
 1
 [1, 1, 1, 1]
+[-1, -1]
   ***   at top-level: nfeltsign(nf,a,3)
   ***                 ^-----------------
   *** nfeltsign: domain error in nfeltsign: index > 2
@@ -17,4 +18,4 @@
   ***   at top-level: nfeltsign(nf,a,[1..3])
   ***                 ^----------------------
   *** nfeltsign: domain error in nfeltsign: index > 2
-Total time spent: 4
+Total time spent: 16
