@@ -16,6 +16,16 @@ nfeltsign(nf, u, [1..4])
 nf=nfinit(a^2-2);
 for(n=1,100,if(nfeltsign(nf,Mod(a+1,a^2-2)^n)!=[(-1)^n,1],print(n)))
 
+\\#2217
+pol=y^6-3*y^5+345*y^4-685*y^3-23547*y^2+23889*y-572438;
+nf = nfinit(pol);
+c=64113452896332165808752478841108920358611/18*y^4-64113452896332165808752478841108920358611/9*y^3-197187989995349756135115637139944886536280*y^2+3613497272812627776240833947360116878011651/18*y-46064974046127698515199898568801651913025508/9;
+nfeltsign(nf,c)
+
+
+sub= x^3 - x^2 - 6986*x + 191736;
+
+
 \\ Errors
 nfeltsign(nf, a, 3)
 nfeltsign(nf, a, [-1..1])
